--- a/index.html
+++ b/index.html
@@ -242,23 +242,23 @@
           const d=s.val()||{};
           const name=d.nome||user.email;
           const avatar=d.avatar?`imagens/${d.avatar}`:"imagens/bonecologin1.png";
-          loginLink.innerHTML=`<img src=\"${avatar}\" class=\"user-icon\"><p class=\"user-name\">${name}</p>`;
+          loginLink.innerHTML=`<img src="${avatar}" class="user-icon"><p class="user-name">${name}</p>`;
           loginLink.removeAttribute("href");
 
           let dash="";
           if(d.role==="proprietario"||d.role==="professor"){
-            dash=`<a href=\"painel_${d.role==='proprietario'?'proprietario':'professor'}.html\" class=\"dashboard-link\">${d.role.toUpperCase()} DASHBOARD</a>`;
+            dash=`<a href="painel_${d.role==='proprietario'?'proprietario':'professor'}.html" class="dashboard-link">${d.role.toUpperCase()} DASHBOARD</a>`;
             liberarNiveis(["Level0","Level1","Level2","Level3","Level4"]);
           }else if(d.role==="aluno"){
-            dash='<a href=\"painel_aluno.html\" class=\"dashboard-link\">STUDENT DASHBOARD</a>';
+            dash='<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
             if(d.atrelado_professor){
               firebase.database().ref("usuarios/"+d.atrelado_professor).once("value").then(p=>{
-                const reg=p.val()?.turmas?.[\"-O8mdLgStvNqNf6x-O5l\"]?.students?.[user.uid];
+                const reg=p.val()?.turmas?.["-O8mdLgStvNqNf6x-O5l"]?.students?.[user.uid];
                 enviarNivel(reg?.nivel_em_curso);
               }).catch(()=>enviarNivel());
             }else enviarNivel();
           }
-          userDropdown.innerHTML=`${dash}<a href=\"#\" id=\"logout\">LEAVE</a>`;
+          userDropdown.innerHTML=`${dash}<a href="#" id="logout">LEAVE</a>`;
           document.querySelectorAll(".dashboard-link").forEach(l=>l.onclick=e=>{
             e.preventDefault();window.location.href=l.getAttribute("href");
           });
@@ -273,42 +273,42 @@
       }
     });
 
-    function enviarNivel(n){ n ? liberarNiveis([n]) : liberarNiveis([\"Level1\"]);}
-    function bloquearTodosNiveis(){ document.querySelectorAll(\".level-button\").forEach(b=>{ b.style.filter=\"grayscale(100%)\"; b.style.pointerEvents=\"none\";});}
-    function liberarNiveis(arr){ document.querySelectorAll(\".level-button\").forEach(b=>{ arr.includes(b.id) ? (b.style.filter=\"none\", b.style.pointerEvents=\"auto\") : (b.style.filter=\"grayscale(100%)\", b.style.pointerEvents=\"none\");});}
+    function enviarNivel(n){ n ? liberarNiveis([n]) : liberarNiveis(["Level1"]); }
+    function bloquearTodosNiveis(){ document.querySelectorAll(".level-button").forEach(b=>{ b.style.filter="grayscale(100%)"; b.style.pointerEvents="none";});}
+    function liberarNiveis(arr){ document.querySelectorAll(".level-button").forEach(b=>{ arr.includes(b.id) ? (b.style.filter="none", b.style.pointerEvents="auto") : (b.style.filter="grayscale(100%)", b.style.pointerEvents="none");});}
 
     /* ---------- Dropdown & Logout ---------- */
     document.getElementById("loginContainer").onclick=e=>{
       if(!firebase.auth().currentUser) return;
       e.preventDefault();
       const d=document.getElementById("userDropdown");
-      d.style.display=(d.style.display===\"none\"||!d.style.display)?\"block\":\"none\";
+      d.style.display=(d.style.display==="none"||!d.style.display)?"block":"none";
     };
-    window.addEventListener(\"click\",e=>{
-      if(!document.getElementById(\"loginContainer\").contains(e.target))
-        document.getElementById(\"userDropdown\").style.display=\"none\";
+    window.addEventListener("click",e=>{
+      if(!document.getElementById("loginContainer").contains(e.target))
+        document.getElementById("userDropdown").style.display="none";
     });
-    document.addEventListener(\"click\",e=>{
-      if(e.target.id===\"logout\"){ firebase.auth().signOut().then(()=>location.reload()); }
+    document.addEventListener("click",e=>{
+      if(e.target.id==="logout"){ firebase.auth().signOut().then(()=>location.reload()); }
     });
 
     /* ---------- DOM Ready ---------- */
-    document.addEventListener(\"DOMContentLoaded\",()=>{
+    document.addEventListener("DOMContentLoaded",()=>{
       englishVoice=pickVoice();
-      document.getElementById(\"playTTSBtn\").onclick=speakRobot;
-      document.getElementById(\"invitationButton\").onclick=()=>location.href=\"Apresentacao/propaganda.html\";
-      document.getElementById(\"freeGamesButton\").onclick=()=>location.href=\"https://hannahenglishcourse.vercel.app/game.html\";
-      document.getElementById(\"subtitleLoggedOut\").onclick=()=>window.scrollTo({top:0,behavior:\"smooth\"});
+      document.getElementById("playTTSBtn").onclick=speakRobot;
+      document.getElementById("invitationButton").onclick=()=>location.href="Apresentacao/propaganda.html";
+      document.getElementById("freeGamesButton").onclick=()=>location.href="https://hannahenglishcourse.vercel.app/game.html";
+      document.getElementById("subtitleLoggedOut").onclick=()=>window.scrollTo({top:0,behavior:"smooth"});
       updateNetworkStatus();
       verificarInstalacao();
     });
-    window.addEventListener(\"beforeunload\",()=>speechSynthesis.cancel());
+    window.addEventListener("beforeunload",()=>speechSynthesis.cancel());
 
     /* ---------- Service Worker ---------- */
     if('serviceWorker' in navigator){
       navigator.serviceWorker.register('/service-worker.js')
-        .then(r=>console.log(\"SW registrado:\",r.scope))
-        .catch(err=>console.error(\"SW erro:\",err));
+        .then(r=>console.log("SW registrado:",r.scope))
+        .catch(err=>console.error("SW erro:",err));
     }
   </script>
 </body>
