--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hannah English - Learning English through Bible Stories</title>
 
-  <!-- FAVICONS -->
+  <!-- ▸▸▸ FAVICONS ◂◂◂ -->
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16"   href="favicon-16x16.png"/>
+  <link rel="icon" type="image/png" sizes="32x32"   href="favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png"/>
   <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
+  <link rel="apple-touch-icon" sizes="180x180"      href="apple-touch-icon.png"/>
 
-  <!-- CSS PRINCIPAL -->
+  <!-- ▸▸▸ CSS PRINCIPAL ◂◂◂ -->
   <link rel="stylesheet" href="CSS/styles.css"/>
 
-  <!-- MANIFESTO PWA -->
+  <!-- ▸▸▸ MANIFESTO PWA ◂◂◂ -->
   <link rel="manifest" href="manifest.json"/>
 
-  <!-- FIREBASE -->
+  <!-- ▸▸▸ FIREBASE ◂◂◂ -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -75,6 +75,13 @@
     #iosInstallBanner{display:none;position:fixed;bottom:0;left:0;right:0;background:#fffbe8;border-top:1px solid #ccc;
       padding:12px 16px;text-align:center;font-size:16px;z-index:10000;}
     #iosInstallBanner button{margin-left:10px;background:#ff5722;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;}
+
+    /* ---------- BOTÃO “OPEN IN APP” (fora do PWA) ---------- */
+    #openAppBtn{
+      display:none;position:fixed;bottom:calc(env(safe-area-inset-bottom,0px) + 24px);left:24px;z-index:9999;
+      background:#4caf50;color:#fff;border:none;padding:14px 24px;border-radius:50px;font-size:18px;font-weight:700;
+      box-shadow:0 6px 12px rgba(0,0,0,.25);cursor:pointer;text-decoration:none;}
+    #openAppBtn:hover{transform:scale(1.05);box-shadow:0 8px 16px rgba(0,0,0,.35);}
   </style>
 </head>
 
@@ -123,6 +130,13 @@
   <!-- Botão flutuante PWA -->
   <button id="installBtn" disabled>Install App</button>
 
+  <!-- Botão “Open in App” (aparece só fora do PWA) -->
+  <!-- Ajuste o package do seu TWA se necessário -->
+  <a id="openAppBtn"
+     href="intent://hannahenglishcourse.netlify.app/#Intent;scheme=https;package=com.hannahenglishcourse.twa;end">
+     Open in App
+  </a>
+
   <!-- Banner iOS -->
   <div id="iosInstallBanner">
     To install the app, tap the <strong>Share</strong> button and choose “Add to Home Screen”.
@@ -145,15 +159,22 @@
     if(!firebase.apps.length){firebase.initializeApp(firebaseConfig);}
     firebase.auth().setPersistence(firebase.auth.Auth.Persistence.SESSION).catch(console.error);
 
+    /* ---------- Função robusta para detectar standalone ---------- */
+    function isInStandaloneMode(){
+      return window.matchMedia('(display-mode: standalone)').matches ||
+             window.navigator.standalone === true;
+    }
+
     /* ---------- Variáveis globais ---------- */
-    let englishVoice=null,deferredPrompt=null;
+    let englishVoice=null,
+        deferredPrompt=null;
     const installBtn=document.getElementById("installBtn");
+    const openAppBtn=document.getElementById("openAppBtn");
 
     /* ---------- Detecção de ambiente ---------- */
     const ua=navigator.userAgent.toLowerCase();
-    const isIOS=/iphone|ipad|ipod/.test(ua);
-    const isStandalone=window.matchMedia("(display-mode: standalone)").matches || navigator.standalone===true;
-    const supportsBIP='onbeforeinstallprompt' in window;
+    const isIOS   = /iphone|ipad|ipod/.test(ua);
+    const supportsBIP = ('onbeforeinstallprompt' in window);
 
     /* ---------- Função p/ ocultar botão e avisar ---------- */
     function hideInstallWithMessage(){
@@ -166,16 +187,21 @@
 
     /* ---------- Verificar se app já está instalado ---------- */
     function verificarInstalacao(){
-      if(isStandalone){ hideInstallWithMessage(); return; }
+      if(isInStandaloneMode()){                         // ← verificação reforçada
+        hideInstallWithMessage();
+        return;
+      }
       if('getInstalledRelatedApps' in navigator){
-        navigator.getInstalledRelatedApps().then(apps=>{
-          if(apps.length>0) hideInstallWithMessage();
-        }).catch(console.error);
+        navigator.getInstalledRelatedApps()
+          .then(apps=>{
+            if(apps.length>0) hideInstallWithMessage();
+          })
+          .catch(console.error);
       }
     }
 
     /* ---------- Banner iOS ---------- */
-    if(isIOS && !isStandalone){
+    if(isIOS && !isInStandaloneMode()){
       const iosBanner=document.getElementById("iosInstallBanner");
       iosBanner.style.display="block";
       document.getElementById("iosBannerClose").onclick=()=>iosBanner.style.display="none";
@@ -190,10 +216,11 @@
     window.addEventListener("offline",updateNetworkStatus);
 
     /* ---------- beforeinstallprompt ---------- */
-    if(!isStandalone && !isIOS){
-      window.addEventListener("beforeinstallprompt",e=>{
+    if(!isInStandaloneMode() && !isIOS){
+      window.addEventListener("beforeinstallprompt",(e)=>{
         e.preventDefault();
         deferredPrompt=e;
+        try{sessionStorage.setItem("bip", "1");}catch{}
         installBtn.disabled=false;
         installBtn.style.display="flex";
         installBtn.classList.add("pulse");
@@ -201,24 +228,32 @@
     }
 
     /* ---------- Clique instalar ---------- */
-    installBtn.onclick=()=>{
+    installBtn.onclick=async ()=>{
       if(!deferredPrompt) return;
       installBtn.classList.remove("pulse");
       installBtn.style.display="none";
       deferredPrompt.prompt();
-      deferredPrompt.userChoice.finally(()=> deferredPrompt=null);
+      await deferredPrompt.userChoice.finally(()=>{
+        deferredPrompt=null;
+        try{sessionStorage.removeItem("bip");}catch{}
+      });
     };
 
     /* ---------- appinstalled ---------- */
     window.addEventListener("appinstalled",hideInstallWithMessage);
 
     /* ---------- TTS util ---------- */
-    function pickVoice(){return (speechSynthesis.getVoices()||[]).find(v=>v.lang.toLowerCase().includes('en'))||null;}
+    function pickVoice(){
+      return (speechSynthesis.getVoices()||[])
+        .find(v=>v.lang.toLowerCase().includes('en'))||null;
+    }
     function speakRobot(){
-      const utt=new SpeechSynthesisUtterance("Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!");
+      const utt=new SpeechSynthesisUtterance(
+        "Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!"
+      );
       if(englishVoice) utt.voice=englishVoice;
       utt.onstart=()=>document.getElementById("roboImage").src="imagens/robo_fala.gif";
-      utt.onend=()=>document.getElementById("roboImage").src="imagens/robo_estatico.png";
+      utt.onend  =()=>document.getElementById("roboImage").src="imagens/robo_estatico.png";
       speechSynthesis.speak(utt);
     }
     speechSynthesis.onvoiceschanged=()=>englishVoice=pickVoice();
@@ -259,8 +294,11 @@
             }else enviarNivel();
           }
           userDropdown.innerHTML=`${dash}<a href="#" id="logout">LEAVE</a>`;
-          document.querySelectorAll(".dashboard-link").forEach(l=>l.onclick=e=>{
-            e.preventDefault();window.location.href=l.getAttribute("href");
+          document.querySelectorAll(".dashboard-link").forEach(l=>{
+            l.onclick=e=>{
+              e.preventDefault();
+              window.location.href=l.getAttribute("href");
+            };
           });
         });
       }else{
@@ -274,8 +312,23 @@
     });
 
     function enviarNivel(n){ n ? liberarNiveis([n]) : liberarNiveis(["Level1"]); }
-    function bloquearTodosNiveis(){ document.querySelectorAll(".level-button").forEach(b=>{ b.style.filter="grayscale(100%)"; b.style.pointerEvents="none";});}
-    function liberarNiveis(arr){ document.querySelectorAll(".level-button").forEach(b=>{ arr.includes(b.id) ? (b.style.filter="none", b.style.pointerEvents="auto") : (b.style.filter="grayscale(100%)", b.style.pointerEvents="none");});}
+    function bloquearTodosNiveis(){
+      document.querySelectorAll(".level-button").forEach(b=>{
+        b.style.filter="grayscale(100%)";
+        b.style.pointerEvents="none";
+      });
+    }
+    function liberarNiveis(arr){
+      document.querySelectorAll(".level-button").forEach(b=>{
+        if(arr.includes(b.id)){
+          b.style.filter="none";
+          b.style.pointerEvents="auto";
+        }else{
+          b.style.filter="grayscale(100%)";
+          b.style.pointerEvents="none";
+        }
+      });
+    }
 
     /* ---------- Dropdown & Logout ---------- */
     document.getElementById("loginContainer").onclick=e=>{
@@ -289,15 +342,30 @@
         document.getElementById("userDropdown").style.display="none";
     });
     document.addEventListener("click",e=>{
-      if(e.target.id==="logout"){ firebase.auth().signOut().then(()=>location.reload()); }
+      if(e.target.id==="logout"){
+        firebase.auth().signOut().then(()=>location.reload());
+      }
     });
 
     /* ---------- DOM Ready ---------- */
     document.addEventListener("DOMContentLoaded",()=>{
       englishVoice=pickVoice();
+
+      /* recuperar BIP armazenado para manter botão visível */
+      if(sessionStorage.getItem("bip") && !isInStandaloneMode()){
+        installBtn.disabled=false;
+        installBtn.style.display="flex";
+        installBtn.classList.add("pulse");
+      }
+
+      /* botão “Open in App” só fora do modo standalone */
+      if(!isInStandaloneMode()){
+        openAppBtn.style.display="flex";
+      }
+
       document.getElementById("playTTSBtn").onclick=speakRobot;
       document.getElementById("invitationButton").onclick=()=>location.href="Apresentacao/propaganda.html";
-      document.getElementById("freeGamesButton").onclick=()=>location.href="https://hannahenglishcourse.vercel.app/game.html";
+      document.getElementById("freeGamesButton").onclick   =()=>location.href="https://hannahenglishcourse.vercel.app/game.html";
       document.getElementById("subtitleLoggedOut").onclick=()=>window.scrollTo({top:0,behavior:"smooth"});
       updateNetworkStatus();
       verificarInstalacao();
