--- a/Carrossel/projetos com barra de recursos levantados.html
+++ b/Carrossel/projetos com barra de recursos levantados.html
@@ -587,8 +587,8 @@
   <!-- CABEÇALHO -->
   <header>
     <div class="logo">
-      <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" class="lang-pt" />
-      <img src="imagens/logo.png" alt="Hannah Foundation Logo" class="lang-en" />
+      <img src="imagens/logo.gif" alt="Logotipo Missão Hannah" class="lang-pt" />
+      <img src="imagens/logo.gif" alt="Hannah Mission Logo" class="lang-en" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
@@ -984,7 +984,9 @@ Shiloh’s Home exists to welcome these mothers and children, offering them a sa
         carousel: [
           "imagens/abrigo/img1.png",
           "imagens/abrigo/img2.png",
-          "imagens/abrigo/img3.png"
+          "imagens/abrigo/img3.png",
+          "imagens/abrigo/img4.png",          
+          "imagens/abrigo/img5.png"
         ]
       },
       bolsa: {
@@ -1031,7 +1033,21 @@ In addition to formal education, these children also attend our Learning Center 
         carousel: [
           "imagens/bolsa/img1.png",
           "imagens/bolsa/img2.png",
-          "imagens/bolsa/img3.png"
+          "imagens/bolsa/img3.png",
+          "imagens/bolsa/img4.png",
+          "imagens/bolsa/img5.png",
+          "imagens/bolsa/img6.png",
+          "imagens/bolsa/img7.png",
+          "imagens/bolsa/img8.png",
+          "imagens/bolsa/img9.png",
+          "imagens/bolsa/img10.png",
+          "imagens/bolsa/img11.png",
+          "imagens/bolsa/img12.png",
+          "imagens/bolsa/img13.png",
+          "imagens/bolsa/img14.png",
+          "imagens/bolsa/img15.png",
+          "imagens/bolsa/img16.png",
+          "imagens/bolsa/img17.png"
         ]
       },
       fazenda: {
@@ -1078,7 +1094,23 @@ Unfortunately, due to the escalating war and the closure of Myanmar’s borders,
         carousel: [
           "imagens/fazenda/img1.png",
           "imagens/fazenda/img2.png",
-          "imagens/fazenda/img3.png"
+          "imagens/fazenda/img3.png",
+          "imagens/fazenda/img4.png",
+          "imagens/fazenda/img5.png",
+          "imagens/fazenda/img6.png",
+          "imagens/fazenda/img7.png",
+          "imagens/fazenda/img8.png",
+          "imagens/fazenda/img9.png",
+          "imagens/fazenda/img10.png",
+          "imagens/fazenda/img11.png",
+          "imagens/fazenda/img12.png",
+          "imagens/fazenda/img13.png",
+          "imagens/fazenda/img14.png",
+          "imagens/fazenda/img15.png",
+          "imagens/fazenda/img16.png",
+          "imagens/fazenda/img17.png",
+          "imagens/fazenda/img18.png",
+          "imagens/fazenda/img19.png"          
         ]
       },
       ingles: {
@@ -1136,7 +1168,13 @@ In a second phase, we plan to make the app available in Brazil so that anyone ca
           "imagens/ingles/img3.png",
           "imagens/ingles/img4.png",
           "imagens/ingles/img5.png",
-          "imagens/ingles/img6.png"
+          "imagens/ingles/img6.png",
+          "imagens/ingles/img7.png",
+          "imagens/ingles/img8.png",
+          "imagens/ingles/img9.png",
+          "imagens/ingles/img10.png",
+          "imagens/ingles/img11.png",
+          "imagens/ingles/img12.png"
         ]
       },
       food: {
@@ -1175,7 +1213,21 @@ Food is essential for life, especially for those facing the horrors of war and e
         carousel: [
           "imagens/food/img1.png",
           "imagens/food/img2.png",
-          "imagens/food/img3.png"
+          "imagens/food/img3.png",
+          "imagens/food/img4.png",
+          "imagens/food/img5.png",
+          "imagens/food/img6.png",
+          "imagens/food/img7.png",
+          "imagens/food/img8.png",
+          "imagens/food/img9.png",
+          "imagens/food/img10.png",
+          "imagens/food/img11.png",
+          "imagens/food/img12.png",
+          "imagens/food/img13.png",
+          "imagens/food/img14.png",
+          "imagens/food/img15.png",
+          "imagens/food/img16.png",
+          "imagens/food/img17.png"
         ]
       },
       his: {
@@ -1230,7 +1282,47 @@ We are facing two major challenges:
         carousel: [
           "imagens/his/img1.png",
           "imagens/his/img2.png",
-          "imagens/his/img3.png"
+          "imagens/his/img3.png",
+          "imagens/his/img4.png",
+          "imagens/his/img5.png",
+          "imagens/his/img6.png",
+          "imagens/his/img7.png",
+          "imagens/his/img8.png",
+          "imagens/his/img9.png",
+          "imagens/his/img10.png",
+          "imagens/his/img11.png",
+          "imagens/his/img12.png",
+          "imagens/his/img13.png",
+          "imagens/his/img14.png",
+          "imagens/his/img15.png",
+          "imagens/his/img16.png",
+          "imagens/his/img17.png",
+          "imagens/his/img18.png",
+          "imagens/his/img19.png",
+          "imagens/his/img20.png",
+          "imagens/his/img21.png",
+          "imagens/his/img22.png",
+          "imagens/his/img23.png",
+          "imagens/his/img24.png",
+          "imagens/his/img25.png",
+          "imagens/his/img26.png",
+          "imagens/his/img27.png",
+          "imagens/his/img28.png",
+          "imagens/his/img29.png",
+          "imagens/his/img30.png",
+          "imagens/his/img31.png",
+          "imagens/his/img32.png",
+          "imagens/his/img33.png",
+          "imagens/his/img34.png",
+          "imagens/his/img35.png",
+          "imagens/his/img36.png",
+          "imagens/his/img37.png",
+          "imagens/his/img38.png",
+          "imagens/his/img39.png",
+          "imagens/his/img40.png",
+          "imagens/his/img41.png",
+          "imagens/his/img42.png",          
+          "imagens/his/img43.png"        
         ]
       },
       saude: {
@@ -1277,7 +1369,30 @@ With the emergency health fund, we seek not only to save lives but also to be a 
         carousel: [
           "imagens/saude/img1.png",
           "imagens/saude/img2.png",
-          "imagens/saude/img3.png"
+          "imagens/saude/img3.png",
+          "imagens/saude/img4.png",
+          "imagens/saude/img5.png",
+          "imagens/saude/img6.png",
+          "imagens/saude/img7.png",
+          "imagens/saude/img8.png",
+          "imagens/saude/img9.png",
+          "imagens/saude/img10.png",
+          "imagens/saude/img11.png",
+          "imagens/saude/img12.png",
+          "imagens/saude/img13.png",
+          "imagens/saude/img14.png",
+          "imagens/saude/img15.png",
+          "imagens/saude/img16.png",
+          "imagens/saude/img17.png",
+          "imagens/saude/img18.png",
+          "imagens/saude/img19.png",
+          "imagens/saude/img20.png",
+          "imagens/saude/img21.png",
+          "imagens/saude/img22.png",
+          "imagens/saude/img23.png",
+          "imagens/saude/img24.png",
+          "imagens/saude/img25.png",
+          "imagens/saude/img26.png"
         ]
       },
       igreja: {
@@ -1328,7 +1443,41 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
         carousel: [
           "imagens/igreja/img1.png",
           "imagens/igreja/img2.png",
-          "imagens/igreja/img3.png"
+          "imagens/igreja/img3.png",
+          "imagens/igreja/img4.png",
+          "imagens/igreja/img5.png",
+          "imagens/igreja/img6.png",
+          "imagens/igreja/img7.png",
+          "imagens/igreja/img8.png",
+          "imagens/igreja/img9.png",
+          "imagens/igreja/img10.png",
+          "imagens/igreja/img11.png",
+          "imagens/igreja/img12.png",
+          "imagens/igreja/img13.png",
+          "imagens/igreja/img14.png",
+          "imagens/igreja/img15.png",
+          "imagens/igreja/img16.png",
+          "imagens/igreja/img17.png",
+          "imagens/igreja/img18.png",
+          "imagens/igreja/img19.png",
+          "imagens/igreja/img20.png",
+          "imagens/igreja/img21.png",
+          "imagens/igreja/img22.png",
+          "imagens/igreja/img23.png",
+          "imagens/igreja/img24.png",
+          "imagens/igreja/img25.png",
+          "imagens/igreja/img26.png",
+          "imagens/igreja/img27.png",
+          "imagens/igreja/img28.png",
+          "imagens/igreja/img29.png",
+          "imagens/igreja/img30.png", 
+          "imagens/igreja/img31.png",
+          "imagens/igreja/img32.png",
+          "imagens/igreja/img33.png",
+          "imagens/igreja/img34.png",
+          "imagens/igreja/img35.png",
+          "imagens/igreja/img36.png",         
+          "imagens/igreja/img37.png"
         ]
       }
     };
