--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -580,6 +580,15 @@
   background: rgba(255, 0, 0, 0.8);
   transform: scale(1.1);
 }
+
+ /* ====== OCULTAR RECURSOS NECESSÁRIOS & PROGRESSO (mantém botão) ====== */
+    #detalhes-recursos-titulo,
+    #detalhes-recursos-texto,
+    #detalhes-progresso-titulo,
+    #detalhes-termometro,
+    #status-descricao {
+      display: none !important;
+    }
   </style>
 </head>
 
