--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -582,13 +582,14 @@
 }
 
  /* ====== OCULTAR RECURSOS NECESSÁRIOS & PROGRESSO (mantém botão) ====== */
-    #detalhes-recursos-titulo,
-    #detalhes-recursos-texto,
-    #detalhes-progresso-titulo,
-    #detalhes-termometro,
-    #status-descricao {
-      display: none !important;
-    }
+#detalhes-recursos-titulo,
+#detalhes-recursos-texto,
+#detalhes-progresso-titulo,
+.termometro,              /* ⬅ fundo da barra */
+#detalhes-termometro,     /* barra de preenchimento */
+#status-descricao {
+  display: none !important;
+}
   </style>
 </head>
 
